# soundvisualisation

./: CMakeLists.txt  testfile
src/: Colors.hpp  main.cpp
src/Network/: Network.cpp  Network.hpp
src/Parser/: Parser.cpp  Parser.hpp
src/Session/: Session.cpp  Session.hpp
src/SessionProperties/: SessionProperties.cpp  SessionProperties.hpp
